# CubeSat

./: README.md
ESP32_soft/: .gitignore  CMakeLists.txt  README.md  partitions.csv  pytest_tcp_server.py  sdkconfig  sdkconfig.ci
ESP32_soft/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_port.h  main.c  process.c  process.h  tcp_server.c  tcp_server.h  waveshare_rgb_lcd_port.h
ESP32_soft/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP32_soft/main/ui/fonts/: ui_font_Display16.c  ui_font_Display24.c
ESP32_soft/main/ui/images/: ui_img_avion_png.c  ui_img_boussol_png.c  ui_img_compass_png.c  ui_img_magn_png.c  ui_img_nord_png.c  ui_img_nucleaire_png.c
ESP32_soft/main/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h
Software/: .gitignore  Makefile
Software/include/: bmp.hpp  gps.hpp  iis.hpp  imu.hpp  system.hpp
Software/src/: bmp.cpp  gps.cpp  iis.cpp  imu.cpp  main.cpp  system.cpp
Software/test/: test_cubeSat.cpp
